--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ site_description: Modular Multi-Directional Blockchain Bridge to interact with M
 repo_name: chainsafe/chainbridge
 repo_url: https://github.com/ChainSafe/chainbridge
 
-## Configuration
+# Configuration
 markdown_extensions:
   - meta
   - admonition
