Apply suggestions from code review
Co-authored-by: David Ansermino <14164624+ansermino@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,8 +31,8 @@ nav:
       - Ethereum: chains/ethereum.md
       - Substrate: chains/substrate.md
   - Guides:
-    - Running Locally: local.md
-    - Deploying Live (Ethereum): live-evm-bridge.md
+    - Running Locally (EVM <-> Substrate): local.md
+    - Deploying Live (EVM <-> EVM): live-evm-bridge.md
   - Testing: test.md
 
 extra:
