Adds new tutorial to docs for deploying an EVM token exchange bridge on testnets (#4)
* adds new page, changes nav, adds images

* Update docs/live-evm-bridge.md

Co-authored-by: David Ansermino <14164624+ansermino@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: David Ansermino <14164624+ansermino@users.noreply.github.com>

* adds commands for bi-directional transfer

* Apply suggestions from code review

Co-authored-by: Willem Olding <willemolding@gmail.com>

* Update docs/live-evm-bridge.md

Co-authored-by: David Ansermino <14164624+ansermino@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,9 @@ nav:
       - ChainBridge: spec.md
       - Ethereum: chains/ethereum.md
       - Substrate: chains/substrate.md
-  - Running Locally: local.md
+  - Guides:
+    - Running Locally (EVM <-> Substrate): local.md
+    - Deploying Live (EVM <-> EVM): live-evm-bridge.md
   - Testing: test.md
 
 extra:
