--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,7 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build site
-        run: make build-mkdocs
+        uses: addnab/docker-run-action@v1
+        with:
+          image: squidfunk/mkdocs-material:latest
+          options: -v ${{ env.working-directory }}:/docs -it build
       - name: Deploy GH Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
