--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build site
-        run: make build-mkdocs
+        uses: addnab/docker-run-action@v1
+        with:
+          image: squidfunk/mkdocs-material:latest
+          options: -v ${{ env.working-directory }}:/docs -it build
