--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - name: Install mkdocs
+        run: pip install mkdocs-material
       - name: Build site
-        uses: addnab/docker-run-action@v1
-        with:
-          image: squidfunk/mkdocs-material:latest
-          options: -v ${{ env.working-directory }}:/docs -it build
-      - name: Deploy GH Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
+        run: mkdocs build
+      - name: Deploy site
+        run: mkdocs gh-deploy --force
