--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs
+name: cd
 
 on:
   push:
@@ -18,7 +18,5 @@ jobs:
           python-version: 3.x
       - name: Install mkdocs
         run: pip install mkdocs-material
-      - name: Build site
-        run: mkdocs build
       - name: Deploy site
         run: mkdocs gh-deploy --force
