--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,10 @@ nav:
     - Running Locally (EVM <-> Substrate): local.md
     - Deploying Live (EVM <-> EVM): live-evm-bridge.md
   - Testing: test.md
+  - Releases:
+      - Relayer: https://github.com/ChainSafe/ChainBridge/tags
+      - SmartContracts: https://github.com/ChainSafe/chainbridge-solidity/tags
+
 
 extra:
   social:
