--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@
 site_name: ChainBridge Docs
 site_description: Modular Multi-Directional Blockchain Bridge to interact with Multiple Networks; Ethereum, Ethereum Classic, Substrate, Cosmos-SDK based chains.
 
-repo_name: chainsafe/chainbridge-docs
-repo_url: https://github.com/ChainSafe/chainbridge-docs
+repo_name: chainsafe/chainbridge
+repo_url: https://github.com/ChainSafe/chainbridge
 
 # Configuration
 markdown_extensions:
@@ -34,6 +34,10 @@ nav:
     - Running Locally (EVM <-> Substrate): local.md
     - Deploying Live (EVM <-> EVM): live-evm-bridge.md
   - Testing: test.md
+  - Releases:
+      - Relayer: https://github.com/ChainSafe/ChainBridge/tags
+      - Solidity: https://github.com/ChainSafe/chainbridge-solidity/tags
+
 
 extra:
   social:
