--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ theme:
   palette:
     primary: black
   favicon: img/favicon.ico
+  custom_dir: overrides
 nav:
   - Overview: index.md
   - Installation: installation.md
